--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
     "framer-motion": "^12.23.22",
-    "next": "15.5.4",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
